# OpenCl-Projects

./: .gitignore  CMakeLists.txt  LICENSE  OpenClProjects.sln  README.md
Graphs/: Graphs.vcxproj  Graphs.vcxproj.filters  build.h  main.cpp  saxpy.cpp  saxpy.h
Graphs/OpenCL Source/: saxpy.cl  vfadd.cl
OpenClProjects/: .gitignore  OpenClProjects.sln
OpenClProjects/Graphs/: Graphs.vcxproj  Graphs.vcxproj.filters  build.h  context.h  debug.h  device.h  exec.h  main.cpp  platform.h  program.h  require.h  required.h  vfadd.cl
Saxpy/: Saxpy.vcxproj  Saxpy.vcxproj.filters  main.cpp  saxpy.cpp  saxpy.h
Utilities/: Utilities.vcxproj  Utilities.vcxproj.filters  context.cpp  context.h  debug.cpp  debug.h  device.cpp  device.h  platform.cpp  platform.h  program.cpp  program.h  required.h  settings.h  types.h
include/: CMakeLists.txt
include/Saxpy/: CMakeLists.txt  saxpy.h
include/Utilities/: CMakeLists.txt  context.h  debug.h  device.h  platform.h  platform_types.h  program.h  program_types.h
src/Saxpy/: CMakeLists.txt  build.h  main.cpp  saxpy.cl  saxpy.cpp  saxpy.test.cpp
src/Utilities/: CMakeLists.txt  context.cpp  debug.cpp  device.cpp  platform.cpp  program.cpp  required.h  settings.h
